Fixed json animation files.

--- a/paper/main.tex
+++ b/paper/main.tex
@@ -17,6 +17,8 @@
 \usepackage[american]{babel}
 \usepackage{csquotes}
 
+\widowpenalty10000
+\clubpenalty10000
 
 %%% Better biblatex
 % \let\citename\relax
@@ -86,7 +88,7 @@
 \author{Anthony J. Clark,$^{1}$ Keith A. Cissell$^{1}$, and Jared M. Moore$^{2}$\\
 \mbox{}\\
 $^1$Missouri State University, Springfield, Missouri, USA\\
-$^2$Grand Valley State University, Allendale, Michigan USA\\
+$^2$Grand Valley State University, Allendale, Michigan, USA\\
 AnthonyClark@MissouriState.edu}
 
 \begin{document}
