--- a/paper/references/refs.bib
+++ b/paper/references/refs.bib
@@ -1,4 +1,39 @@
 
+@inproceedings{Moore.2018.2CAL.TiebreaksDiversityIsolating,
+  address = {Tokyo, Japan},
+  title = {Tiebreaks and {{Diversity}}: {{Isolating Effects}} in {{Lexicase Selection}}},
+  shorttitle = {Tiebreaks and {{Diversity}}},
+  doi = {10.1162/isal_a_00109},
+  language = {en},
+  booktitle = {The 2018 {{Conference}} on {{Artificial Life}}},
+  publisher = {{MIT Press}},
+  author = {Moore, Jared M. and Stanton, Adam},
+  year = {2018},
+  pages = {590-597},
+  file = {/Users/ajc/Zotero/storage/F8G2BCML/Moore_Stanton_2018_Tiebreaks and Diversity.pdf}
+}
+
+
+
+@article{Mintchev.2016.IRAM.AdaptiveMorphologyDesign,
+  title = {Adaptive {{Morphology}}: {{A Design Principle}} for {{Multimodal}} and {{Multifunctional Robots}}},
+  volume = {23},
+  issn = {1070-9932},
+  shorttitle = {Adaptive {{Morphology}}},
+  doi = {10.1109/MRA.2016.2580593},
+  abstract = {Morphology plays an important role in behavioral and locomotion strategies of living and artificial systems. There is biological evidence that adaptive morphological changes can not only extend dynamic performances by reducing tradeoffs during locomotion but also provide new functionalities. In this article, we show that adaptive morphology is an emerging design principle in robotics that benefits from a new generation of soft, variable-stiffness, and functional materials and structures. When moving within a given environment or when transitioning between different substrates, adaptive morphology allows accommodation of opposing dynamic requirements (e.g., maneuverability, stability, efficiency, and speed). Adaptive morphology is also a viable solution to endow robots with additional functionalities, such as transportability, protection, and variable gearing. We identify important research and technological questions, such as variable-stiffness structures, in silico design tools, and adaptive control systems to fully leverage adaptive morphology in robotic systems.},
+  number = {3},
+  journal = {IEEE Robotics Automation Magazine},
+  author = {Mintchev, S. and Floreano, D.},
+  month = sep,
+  year = {2016},
+  keywords = {_tablet},
+  pages = {42-54},
+  file = {/Users/ajc/Zotero/storage/4CYNSQQH/Mintchev_Floreano_2016_Adaptive Morphology.pdf;/Users/ajc/Zotero/storage/MIZVS4IN/7565704.html}
+}
+
+
+
 @article{Quinn.2003.IJRR.ParallelComplementaryStrategies,
   title = {Parallel {{Complementary Strategies}} for {{Implementing Biological Principles}} into {{Mobile Robots}}},
   volume = {22},
@@ -82,20 +117,24 @@
 }
 
 
-
-@article{Chen.2017.ITR.TurboQuadNovelLega,
+@article{Chen.2017.ITR.TurboQuadNovelLeg,
   title = {{{TurboQuad}}: {{A Novel Leg}}\textendash{{Wheel Transformable Robot With Smooth}} and {{Fast Behavioral Transitions}}},
   volume = {33},
-  issn = {1552-3098, 1941-0468},
+  issn = {1552-3098},
   shorttitle = {{{TurboQuad}}},
   doi = {10.1109/TRO.2017.2696022},
+  abstract = {This report is on the design, control strategy, implementation, and performance evaluation of a novel leg-wheel transformable robot called TurboQuad, which can perform fast gait/mode coordination and transitions in wheeled mode, in legged trotting, and in legged walking while in motion. This functionality was achieved by including two novel setups in the robot that were not included in its predecessor, Quattroped. First, a new leg-wheel mechanism was used, in which the leg/wheel operation and its in situ transition can be driven by the same set of motors, so the actuation system and power can be utilized efficiently. Second, a bio-inspired control strategy was applied based on the central pattern generator and coupled oscillator networks, in which the gait/mode generation, coordination, and transitions can be integrally controlled. The robot was empirically built and its performances in the described three gaits/modes as well as the transitions among them were experimentally evaluated and will be discussed in this paper.},
   number = {5},
   journal = {IEEE Transactions on Robotics},
-  author = {Chen, Wei-Hsi and Lin, Hung-Sheng and Lin, Yun-Meng and Lin, Pei-Chun},
+  author = {Chen, W. and Lin, H. and Lin, Y. and Lin, P.},
   month = oct,
   year = {2017},
-  pages = {1025-1040}
+  pages = {1025-1040},
+  file = {/Users/ajc/Zotero/storage/48IB856W/Chen et al_2017_TurboQuad.pdf;/Users/ajc/Zotero/storage/4947IXWP/7932521.html}
 }
+
+
+
 
 
 
@@ -659,19 +698,6 @@ keywords={actuators;legged locomotion;pitch control (position);robot kinematics;
 doi={10.1109/ICInfA.2016.7831789},
 month={Aug},}
 
-@ARTICLE{Chen.TransRobo.Turboquad.2017,
-author={W. H. Chen and H. S. Lin and Y. M. Lin and P. C. Lin},
-journal={{IEEE Transactions on Robotics}},
-title={TurboQuad: A Novel Leg-Wheel Transformable Robot With Smooth and Fast Behavioral Transitions},
-year={2017},
-volume={PP},
-number={99},
-pages={1-16},
-abstract={This report is on the design, control strategy, implementation, and performance evaluation of a novel leg–wheel transformable robot called TurboQuad, which can perform fast gait/mode coordination and transitions in wheeled mode, in legged trotting, and in legged walking while in motion. This functionality was achieved by including two novel setups in the robot that were not included in its predecessor, Quattroped. First, a new leg–wheel mechanism was used, in which the leg/wheel operation and its in situ transition can be driven by the same set of motors, so the actuation system and power can be utilized efficiently. Second, a bio-inspired control strategy was applied based on the central pattern generator and coupled oscillator networks, in which the gait/mode generation, coordination, and transitions can be integrally controlled. The robot was empirically built and its performances in the described three gaits/modes as well as the transitions among them were experimentally evaluated and will be discussed in this paper.},
-keywords={Legged locomotion;Morphology;Oscillators;Robot kinematics;Wheels;Central pattern generator (CPG);coupled oscillator network;gait transition;leg–wheel mechanism;quadruped;transformable robot},
-doi={10.1109/TRO.2017.2696022},
-ISSN={1552-3098},
-month={},}
 
 @INPROCEEDINGS{She.IROS.Transformable-wheel.2015,
 author={Yu She and C. J. Hurd and H. J. Su},
